<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <ImageView
            android:id="@+id/ivDetailOffice"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:src="@drawable/office_icon"
         />

        <TextView
            style="@style/RobotoBold"
            android:id="@+id/tvTitleCabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_kantorCabang"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            />

        <TextView
            style="@style/RobotoBold"
            android:id="@+id/tvLabelAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_alamat"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvAlamatDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_loremipsum"
            />

        <TextView
            style="@style/RobotoBold"
            android:id="@+id/tvLabelPhone"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvPhoneDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_telp"
            />


    </LinearLayout>

</RelativeLayout>