<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_pnm"
        >

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/ic_pnm"

            />

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:id="@+id/iv_onboard"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/icon_uang" />

        <RelativeLayout
            android:layout_below="@+id/iv_onboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/tvTitleMengajukanPinjaman"
                    android:textAllCaps="true"
                    android:textColor="#1755a6"
                    android:fontFamily="@font/roboto_bold"
                    android:textStyle="bold"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black_overlay_dark"
                    android:textAlignment="center"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:text="Silahkan anda isi form dibawah ini"
                    />

                <Button
                    android:id="@+id/btn_ajukan_pinjaman"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:background="@drawable/button_blue_selector"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/action_ajukan_pinjaman"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewPagerCountDots"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_above="@+id/ll_footer"
        android:layout_marginBottom="12dp"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:orientation="horizontal" />


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_hubungi_kami"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="@drawable/button_border"
            android:text="@string/HubungiKami"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="@drawable/button_border"
            android:text="@string/action_signin"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            />

    </LinearLayout>


</RelativeLayout>