<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    cardview:cardCornerRadius="2dp"
    cardview:cardElevation="3dp"
    cardview:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/layoutTitleAngsuran"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            >
            <TextView
                style="@style/RobotoBold"
                android:id="@+id/title_angsuran"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:maxLines="3"
                android:padding="8dp"
                android:text="Angsuran 1"
                android:textColor="@color/grey_dark"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:text="Tanggal Transaksi"
                    android:textSize="12sp"
                    />

                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvTglTransaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textColor="#FF9849"
                    android:textAlignment="textEnd"
                    android:text="@string/dummy_date"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentAngsuran"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#F5F8FD"
            android:layout_below="@+id/layoutTitleAngsuran">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvPokokOS"
                    />

                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvPokokOs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/grey_dark_more"
                    android:layout_marginTop="2dp"
                    android:textAlignment="center"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvBungaOs"
                    />
                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvBungaOs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:textSize="16sp"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvTotalOS"
                    />
                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvTotalOs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentBunga"
            android:layout_below="@id/contentAngsuran"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvPokokDibayar"
                    />

                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvPokokDibayar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/grey_dark_more"
                    android:layout_marginTop="2dp"
                    android:textAlignment="center"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvBungaDibayar"
                    />
                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvBungaDibayar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:textSize="16sp"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvTotalBayar"
                    />
                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvTotalDibayar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/contentBunga"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F8FD"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvAngsuranPokok"
                    />

                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvAngsuranPokok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/grey_dark_more"
                    android:layout_marginTop="2dp"
                    android:textAlignment="center"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvAngsuranBunga"
                    />
                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvAngsuranBunga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:textSize="16sp"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_more"
                    android:text="@string/tvTotalAngsuran"
                    />
                <TextView
                    style="@style/RobotoRegular"
                    android:id="@+id/tvTotalAngsuran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:maxLines="3"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/dummy_price"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>